apps/finance/finance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance
  labels:    
    app: finance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance      
  template:
    metadata:
      labels:
        app: finance        
    spec:
      containers:
        - name: finance
          image: "docker.io/burrsutter/hello:1.0.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
