apps/finance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance
  labels:    
    app: finance
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: finance
