apps/finance/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: finance
  labels:
    name: finance
spec:
  path: "/"
  to:
    kind: Service
    name: finance
